--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ main = "src/index.ts"
 compatibility_date = "2023-12-06"
 send_metrics = false
 node_compat = true
+minify = true
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
