--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
 	"scripts": {
 		"test": "vitest",
 		"test:cov": "vitest run --coverage",
-		"deploy": "wrangler deploy --minify",
-		"dev": "wrangler dev",
-		"start": "wrangler dev"
+		"build:bookmarklet": "node ./esbuild.mjs",
+		"deploy": "pnpm run build:bookmarklet && wrangler deploy --minify",
+		"start": "wrangler dev",
+		"postinstall": "pnpm run build:bookmarklet"
 	},
 	"devDependencies": {
 		"@ahmedelgabri/prettier-config": "^7.0.0",
 		"@cloudflare/workers-types": "^4.20231121.0",
 		"@vitest/coverage-v8": "^1.1.0",
+		"esbuild": "^0.19.10",
 		"itty-router": "^3.0.12",
 		"msw": "^2.0.11",
 		"prettier": "^3.1.1",
