--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@ahmedelgabri/prettier-config": "^7.0.0",
 		"@cloudflare/workers-types": "^4.20231121.0",
+		"@types/mustache": "^4.2.5",
 		"@vitest/coverage-v8": "^1.1.0",
 		"esbuild": "^0.19.10",
 		"itty-router": "^3.0.12",
@@ -24,6 +25,7 @@
 	"dependencies": {
 		"@mozilla/readability": "^0.5.0",
 		"linkedom": "^0.16.5",
+		"mustache": "^4.2.0",
 		"rehype-parse": "^9.0.0",
 		"rehype-remark": "^10.0.0",
 		"rehype-sanitize": "^6.0.0",
