--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@ahmedelgabri/prettier-config": "^7.0.0",
 		"@cloudflare/workers-types": "^4.20231121.0",
+		"@types/mdast": "^4.0.3",
 		"@types/mustache": "^4.2.5",
 		"@vitest/coverage-v8": "^1.1.0",
 		"esbuild": "^0.19.10",
