Switch to unified as the main parser and add diff mode to check the differences for now before getting rid of readability

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 	},
 	"dependencies": {
 		"@mozilla/readability": "^0.5.0",
+		"@types/diff": "^5.0.9",
+		"diff": "^5.2.0",
+		"hast-util-to-html": "^9.0.0",
 		"linkedom": "^0.16.5",
 		"mustache": "^4.2.0",
 		"rehype-parse": "^9.0.0",
