itty-router -> hono

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"@types/mustache": "^4.2.5",
 		"@vitest/coverage-v8": "^1.5.3",
 		"esbuild": "^0.20.2",
-		"itty-router": "^5.0.17",
 		"msw": "^2.2.14",
 		"prettier": "^3.2.5",
 		"typescript": "^5.4.5",
@@ -28,6 +27,7 @@
 		"@types/diff": "^5.2.0",
 		"diff": "^5.2.0",
 		"hast-util-to-html": "^9.0.1",
+		"hono": "^4.5.10",
 		"linkedom": "^0.16.11",
 		"mustache": "^4.2.0",
 		"rehype-parse": "^9.0.0",
