--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"@mozilla/readability": "^0.5.0",
 		"@types/diff": "^5.2.0",
 		"diff": "^5.2.0",
+		"hast-util-select": "^6.0.2",
 		"hast-util-to-html": "^9.0.1",
+		"hast-util-to-string": "^3.0.0",
 		"hono": "^4.5.10",
 		"linkedom": "^0.16.11",
 		"mustache": "^4.2.0",
